# hardcaml_waveterm

./: README.md  hardcaml_waveterm.opam
bench/: dune  test.ml
cyclesim/: dune  hardcaml_waveterm_cyclesim.ml  hardcaml_waveterm_cyclesim.mli
event_store/src/: bits_store.ml  bits_store.mli  dune  event_store.ml  event_store.mli  event_store_intf.ml  hardcaml_waveterm_event_store.ml
event_store/test/: dune  test_event_store.ml  test_hardcaml_waveterm_event_store.ml
interactive/: cursors.ml  cursors.mli  draw_notty.ml  draw_notty.mli  dune  event_response.ml  hardcaml_waveterm_interactive.ml  help_window.ml  help_window.mli  help_window_intf.ml  hierarchy.ml  hierarchy.mli  hierarchy_intf.ml  jbuild  key_actions.ml  key_actions.mli  key_handlers.ml  key_handlers.mli  key_handlers_intf.ml  scroll.ml  scroll.mli  signals_window.ml  signals_window.mli  signals_window_intf.ml  ui_state.ml  ui_state.mli  ui_state_intf.ml  values_window.ml  values_window.mli  values_window_intf.ml  waveform_window.ml  waveform_window.mli  waveform_window_intf.ml  waves_window.ml  waves_window.mli  waves_window_intf.ml  widget.ml  widget.mli
kernel/: data.ml  data.mli  data_intf.ml  display_rule.ml  display_rule.mli  display_rules.ml  display_rules.mli  draw.ml  draw.mli  dune  hardcaml_waveterm_kernel.ml  key_help.mli  port.ml  port.mli  port_name.mli  rect.ml  rect.mli  render.ml  render.mli  render_intf.ml  sim.ml  sim.mli  style.ml  style.mli  text_alignment.ml  wave.ml  wave.mli  wave_condition.ml  wave_condition.mli  wave_intf.ml  waveform.ml  waveform.mli  waveform_intf.ml  waves.ml  waves.mli  waves_intf.ml  window_bounds.ml  window_bounds.mli  window_styles.ml  window_styles.mli  (+2 more)
src/: data.ml  data.mli  display_rule.ml  display_rule.mli  display_rules.ml  display_rules.mli  draw.ml  dune  expect.ml  expect.mli  expect_intf.ml  hardcaml_waveterm.ml  jbuild  port.ml  port_name.ml  port_name.mli  render.ml  render.mli  serialize_waveform.ml  serialize_waveform.mli  serialize_waveform_intf.ml  sim.ml  text_alignment.ml  wave.ml  wave.mli  wave_format.ml  wave_format.mli  waveform.ml  waveform.mli  waveform_digest.ml  waveform_digest.mli  waveform_digest_intf.ml  waves.ml  waves.mli  write.ml
test/: dune  example.ml  example.mli  hardcaml_waveterm_test.ml  import.ml  jbuild  test_clocking_naming.ml  test_data.ml  test_data.mli  test_event_store_waveform.ml  test_marshall.ml  test_notty_waveterm.ml  test_rc.ml  test_scope_assertions.ml  test_scrollbar.ml  test_scrollbar_aligned.ml  test_scrollbar_offset.ml  test_sim.ml  ttest_sim.ml
test_interactive/: dune  import.ml  test_notty_hierarchy.ml  test_notty_interactive.ml  test_notty_rendering.ml  test_scrollbar.ml
