opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/hardcaml_waveterm"
bug-reports: "https://github.com/janestreet/hardcaml_waveterm/issues"
dev-repo: "git+https://github.com/janestreet/hardcaml_waveterm.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/hardcaml_waveterm/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.14.0"}
  "base"
  "core_unix"
  "expect_test_helpers_core"
  "hardcaml"
  "notty_async"
  "ppx_jane"
  "stdio"
  "cryptokit"                {>= "1.16" & < "1.17"}
  "dune"                     {>= "2.0.0"}
  "notty"                    {>= "0.2.1"}
  "num"
  "re"                       {>= "1.8.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "A terminal based digital waveform viewer for Hardcaml"
description: "
The hardcaml_waveterm library renders digital waveforms to unicode. Such
waveforms can be used in expect tests or for debugging using the supplied
interactive terminal application.

The library is closely integrated with Hardcaml and can be easily attached
to simulations.
"
conflicts: ["hardcaml-waveterm"] 
