(library
 (name hardcaml_waveterm_test)
 (libraries base expect_test_helpers_core hardcaml_waveterm
   hardcaml_waveterm_interactive core hardcaml hardcaml_waveterm_cyclesim
   hardcaml_waveterm_event_store hardcaml_waveterm_kernel notty notty.unix re
   stdio)
 (preprocess
  (pps ppx_hardcaml ppx_jane)))
